# gammaspotter

./: .gitignore  404.html  CITATION.cff  Na-22_calibration.csv  Na-22_calibration.json  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
catalogs/: common_calibration_sources.csv
docs/: analyze.md  calibrate.md  getting_started.md  index.md
docs/User Guide/: analyze.md  calibrate.md  index.md
docs/reference/: models.md  views.md
docs/usage/: analyze.md  calibrate.md  index.md
docs/user_guide/: 1. introduction.md  2. calibrate.md
example_data/: Contaminated Mushrooms.csv  Na-22 Cs-137 Ba-133.csv  Na-22.csv
getting_started/: index.html
reference/models/: index.html
reference/views/: index.html
src/gammaspotter/: cli.py  fit_models.py  gui.py  match_features.py  process_data.py
src/gammaspotter/catalogs/: gamma-energies-common.csv  gamma-energies.csv
src/gammaspotter/models/: model.py
src/gammaspotter/views/: cli.py
tests/: test_match_features_test.py
usage/: index.html
usage/analyze/: index.html
usage/calibrate/: index.html
