[tool.poetry]
name = "gammaspotter"
version = "0.1.0"
description = "A Python package for identifying gamma sources."
authors = ["Tijn Schuitevoerder <tijnschuitevoerder@gmail.com>", "Dylan Telleman <dylan.telleman@ziggo.nl>"]
readme = "README.md"
packages = [{include = "gammaspotter", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.11.4"
lmfit = "^1.2.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
click = "^8.1.7"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gammaspotter = "gammaspotter.cli:cmd_group"