[tool.poetry]
name = "gammaspotter"
version = "0.2.0"
description = "A Python package for identifying gamma sources."
authors = ["Tijn Schuitevoerder <tijnschuitevoerder@gmail.com>", "Dylan Telleman <dylan.telleman@ziggo.nl>"]
readme = "README.md"
packages = [{include = "gammaspotter", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
scipy = "^1.11.4"
lmfit = "^1.2.2"
pandas = "^2.1.3"
numpy = "^1.26.2"
pathlib = "^1.0.1"
pyside6 = "^6.6.1"
pyqtgraph = "^0.13.3"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.1"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
pymdown-extensions = "^10.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gammaspotter = "gammaspotter.gui:main"
